file(GLOB NO_MODULES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp)
foreach(NO_MODULE ${NO_MODULES})
    file(STRINGS ${NO_MODULE} REQUIRESSL REGEX "REQUIRESSL")
    file(STRINGS ${NO_MODULE} REQUIRESASL REGEX "REQUIRESASL")
    if((NOT REQUIRESSL OR HAVE_LIBSSL) AND (NOT REQUIRESASL OR HAVE_SASL))
        get_filename_component(NO_MOD ${NO_MODULE} NAME_WE)
        add_library(${NO_MOD} MODULE ${NO_MODULE})
        target_link_libraries(${NO_MOD} ${NO_LIBRARIES} $ENV{${NO_MOD}_LDFLAGS})
        set_target_properties(${NO_MOD} PROPERTIES PREFIX "" SUFFIX .so
                                        COMPILE_FLAGS "$ENV{${NO_MOD}_CXXFLAGS}"
                                        LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/modules)
        if(NOT DEVELOPER)
            install(TARGETS ${NO_MOD} LIBRARY DESTINATION ${INSTALL_MODDIR})
        endif()
    endif()
endforeach()
